--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite --port $PORT"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
