--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-pages-sitemap": "^1.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
